turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:52: error: not enough arguments for constructor Array: (_length: Int)Array[Array[Array[Int]]].
Unspecified value parameter _length.
    		rule = new Array[Array[Array[Int]]]
                       ^